fix mobile overflow

--- a/css/StyleHeader.css
+++ b/css/StyleHeader.css
@@ -1,13 +1,3 @@
-body {
-	background: radial-gradient(ellipse at center, rgb(127 0 173 / 48%) 0%, rgb(72 13 145 / 11%) 60%, rgb(27 0 61 / 17%) 90%), url(../img/bgSpace.png);
-	background-size: cover;
-	z-index:-5;
-	overflow: hidden;
-}
-
-/* h1 {
-	animation: neon1 1.5s ease-in-out infinite alternate;
-} */
 .option{
 	position: absolute;
 	right: 10px;
@@ -296,15 +286,6 @@ body {
 		transform: translateY(0%);
 	  }
 }
-
-/* @keyframes neon1 {
-  from {
-    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px #49008d, 0 0 70px #49008d, 0 0 80px #49008d, 0 0 100px #49008d, 0 0 150px #FF1177;
-  }
-  to {
-    text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #49008d, 0 0 35px #49008d, 0 0 40px #49008d, 0 0 50px #49008d, 0 0 75px #49008d;
-  }
-} */
 
 @keyframes layerupanim
 {
