--- a/css/StyleMain.css
+++ b/css/StyleMain.css
@@ -6,12 +6,21 @@
 }
 
 body {
+  background: radial-gradient(ellipse at center, rgb(127 0 173 / 48%) 0%, rgb(72 13 145 / 11%) 60%, rgb(27 0 61 / 17%) 90%), url(../img/bgSpace.png);
+	background-size: cover;
+	z-index:-5;
   min-height: 100vh;
   display: grid;
   place-items: center;
-  background: #100721;
   font-family: "Ubuntu Mono", monospace;
   font-weight: 400;
+}
+
+#View{
+  width: 100%;
+  height: 100%;
+  position: relative;
+  overflow: hidden;
 }
 
 a, a:visited, a:active {
