--- a/css/StyleProject.css
+++ b/css/StyleProject.css
@@ -105,10 +105,10 @@
     }
     
     .description{
-        top: 80%;
+        top: 60%;
         margin-left: -980px;
         width: 95%;
-        height: 100%;
+        height: 130%;
         overflow: hidden;
     }
 
